<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/darker_gray"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jschdev.linterna.ColorActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_button" >

        <TextView
            android:id="@+id/txt_instrucciones"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/txt_instrucciones"
            android:textColor="@color/txt_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_button"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/margin_button" >

        <Button
            android:id="@+id/color_texto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_restart"
            android:onClick="changeColor" />

        <TextView
            android:id="@+id/txt_texto"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:text="@string/txt_texto"
            android:textColor="@color/txt_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_button"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/margin_button" >

        <Button
            android:id="@+id/color_fondo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_restart"
            android:onClick="changeColor" />

        <TextView
            android:id="@+id/txt_fondo"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:text="@string/txt_fondo"
            android:textColor="@color/txt_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_button"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/margin_button" >

        <Button
            android:id="@+id/color_on"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_restart"
            android:onClick="changeColor" />

        <TextView
            android:id="@+id/txt_on"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:text="@string/txt_on"
            android:textColor="@color/txt_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_button"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/margin_button" >

        <Button
            android:id="@+id/color_off"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_restart"
            android:onClick="changeColor" />

        <TextView
            android:id="@+id/txt_off"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:text="@string/txt_off"
            android:textColor="@color/txt_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_button"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/margin_button" >

        <Button
            android:id="@+id/color_circle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_restart"
            android:onClick="changeColor" />

        <TextView
            android:id="@+id/txt_circle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:text="@string/txt_circle"
            android:textColor="@color/txt_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_button"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/margin_button" >

        <Button
            android:id="@+id/color_lineCircle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_restart"
            android:onClick="changeColor" />

        <TextView
            android:id="@+id/txt_lineCircle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:text="@string/txt_lineCircle"
            android:textColor="@color/txt_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/materialcolorpicker__white"
            android:onClick="guardar"
            android:text="Guardar"
            android:textColor="@color/materialcolorpicker__black" />
    </LinearLayout>

</LinearLayout>